--- a/index.html
+++ b/index.html
@@ -1,102 +1,151 @@
 ---
-layout: index 
+layout: index
 title: Lab on Maintenance, Construction and Intelligence of Software (MCIS)
 ---
 
-  <div id="mySlides">
-    	<div id="slide1">
+<div id="mySlides">
+    <div id="slide1">
         <img src="images/research-wide.jpg" alt="Slide 1 jFlow Plus" />
-        <span><b class="slideheading">Research is your Destiny</b><br />You never give up, and don't mind making your hands dirty. The truth is out there,<br/>and you will find it. Honesty and ethics are not hollow terms for you. Chaos only exists<br/>to bring back order. You keep notes of everything you do, just in case. Always think<br/>before you do, and do before you report.<a href="join.html" title="MCIS == Research" class="readmore">Join MCIS!</a></span>
+        <span><b class="slideheading">Research is your Destiny</b><br />You never give up, and don't mind making your
+            hands dirty. The truth is out there,<br />and you will find it. Honesty and ethics are not hollow terms for
+            you. Chaos only exists<br />to bring back order. You keep notes of everything you do, just in case. Always
+            think<br />before you do, and do before you report.<a href="join.html" title="MCIS == Research"
+                class="readmore">Join MCIS!</a></span>
     </div>
     <div id="slide2">
         <img src="images/read-wide.jpg" alt="Slide 2 jFlow Plus" />
-        <span><b class="slideheading">Knowledge is your Favourite Type of Food</b><br />You're a curious person by nature. Once you start reading a book, you can't put it down without<br/> finishing it. Learning is an incremental process, every tidbit helps. Google is your best friend.<a href="join.html" title="MCIS == learning" class="readmore">Join MCIS!</a></span>
+        <span><b class="slideheading">Knowledge is your Favourite Type of Food</b><br />You're a curious person by
+            nature. Once you start reading a book, you can't put it down without<br /> finishing it. Learning is an
+            incremental process, every tidbit helps. Google is your best friend.<a href="join.html"
+                title="MCIS == learning" class="readmore">Join MCIS!</a></span>
     </div>
-    <div id="slide3">    
+    <div id="slide3">
         <img src="images/ninja-wide.jpg" alt="Slide 3 jFlow Plus" />
-        <span><b class="slideheading">Are You a Code Ninja?</b><br />You know the essential concepts of &gt;10 programming languages and exploit them<br/> as needed. You think before you code. Reuse is your middle name. You use Perl<br/> scripts for regular expressions, Prolog code for querying, Java for its huge<br/> array of libraries, and even C++ if that's what it takes to finish a project successfully.<a href="join.html" title="MCIS == Code Ninja-ing" class="readmore">Join MCIS!</a></span>
-	</div>    	
+        <span><b class="slideheading">Are You a Code Ninja?</b><br />You know the essential concepts of &gt;10
+            programming languages and exploit them<br /> as needed. You think before you code. Reuse is your middle
+            name. You use Perl<br /> scripts for regular expressions, Prolog code for querying, Java for its huge<br />
+            array of libraries, and even C++ if that's what it takes to finish a project successfully.<a
+                href="join.html" title="MCIS == Code Ninja-ing" class="readmore">Join MCIS!</a></span>
+    </div>
     <div id="slide4">
         <img src="images/teach-wide.jpg" alt="Slide 4 jFlow Plus" />
-        <span><b class="slideheading">Teacher is your Middle Name</b><br />From kindergarten on, you've had this irresistible urge to explain things to others. Knowledge<br/> means nothing without sharing it with others. You hate memorization. You translate complex<br/> definitions into funny anecdotes, abstract structures into simple graphics, tables full of numbers<br/> into smart graphs.<a href="join.html" title="MCIS == Teaching" class="readmore">Join MCIS!</a></span>
-   </div>   
+        <span><b class="slideheading">Teacher is your Middle Name</b><br />From kindergarten on, you've had this
+            irresistible urge to explain things to others. Knowledge<br /> means nothing without sharing it with others.
+            You hate memorization. You translate complex<br /> definitions into funny anecdotes, abstract structures
+            into simple graphics, tables full of numbers<br /> into smart graphs.<a href="join.html"
+                title="MCIS == Teaching" class="readmore">Join MCIS!</a></span>
+    </div>
 </div>
 
 <div id="myController">
-   <span class="jFlowControl"></span>
-   <span class="jFlowControl"></span>
-   <span class="jFlowControl"></span>
-  <span class="jFlowControl"></span>
+    <span class="jFlowControl"></span>
+    <span class="jFlowControl"></span>
+    <span class="jFlowControl"></span>
+    <span class="jFlowControl"></span>
 </div>
 
-<section class="jFlowPrev"><div></div></section>
-<section class="jFlowNext"><div></div></section>
+<section class="jFlowPrev">
+    <div></div>
+</section>
+<section class="jFlowNext">
+    <div></div>
+</section>
 <br />
 <br />
 
-    <article class="box" id="home_featured21">
-      <div class="block"><h2>Maintenance</h2>
-        <p><span class="essence">MCIS helps practitioners maintain their software systems.</span> For example, which files should be tested or fixed first and by who? Which bug to fix first? Did the performance of our system degrade compared to the previous release? How can we improve the energy consumption of our system? Will this change have nasty consequences on other features?<br />
-<a href="about.html#maintenance" class="read_more">Read More</a> 
-</p>
-      </div>
-      <div class="block"><h2>Construction</h2>
-        <p><span class="essence">MCIS helps practitioners release their products faster, but without sacrificing quality.</span> For example, how healthy is the build system? How are implementation changes by different development teams integrated and tested towards inclusion in the next release? How can we prepare our development process and software system for <a href="http://continuousdelivery.com/">continuous delivery</a>?<br />
-<a href="about.html#construction" class="read_more">Read More</a> 
-</p>
-      </div>
-      <div class="block last"><h2>Intelligence</h2>
-        <p><span class="essence">MCIS' helps practitioners understand their software systems and construction infrastructure.</span> For example, how does the concrete architecture of this software component look like? What features and functionality has the development team been working on? Which contributors have been the most productive? How does our construction infrastructure work?<br />
-<a href="about.html#intelligence" class="read_more">Read More</a></p>
-      </div>
-      <div class="clear"></div>
-    </article>
-    
- </div>
- 
-<div class="callout"> 
-    <div class="calloutcontainer"> 
-        <div class="container_12"> 
-            <div class="grid"> 
+<article class="box" id="home_featured21">
+    <div class="block">
+        <h2>Maintenance</h2>
+        <p><span class="essence">MCIS helps practitioners maintain their software systems.</span> For example, which
+            files should be tested or fixed first and by who? Which bug to fix first? Did the performance of our system
+            degrade compared to the previous release? How can we improve the energy consumption of our system? Will this
+            change have nasty consequences on other features?<br />
+            <a href="about.html#maintenance" class="read_more">Read More</a>
+        </p>
+    </div>
+    <div class="block">
+        <h2>Construction</h2>
+        <p><span class="essence">MCIS helps practitioners release their products faster, but without sacrificing
+                quality.</span> For example, how healthy is the build system? How are implementation changes by
+            different development teams integrated and tested towards inclusion in the next release? How can we prepare
+            our development process and software system for <a href="http://continuousdelivery.com/">continuous
+                delivery</a>?<br />
+            <a href="about.html#construction" class="read_more">Read More</a>
+        </p>
+    </div>
+    <div class="block last">
+        <h2>Intelligence</h2>
+        <p><span class="essence">MCIS' helps practitioners understand their software systems and construction
+                infrastructure.</span> For example, how does the concrete architecture of this software component look
+            like? What features and functionality has the development team been working on? Which contributors have been
+            the most productive? How does our construction infrastructure work?<br />
+            <a href="about.html#intelligence" class="read_more">Read More</a>
+        </p>
+    </div>
+    <div class="clear"></div>
+</article>
+
+</div>
+
+<div class="callout">
+    <div class="calloutcontainer">
+        <div class="container_12">
+            <div class="grid">
                 <div class="alignleft">
-                    <h3>Want to know all about our research?</h3> 
-                    <p>Check <a href="publications.html">our publications page</a>!</p> 
-                </div> 
-        <a href="publications.html" class="more" target="_blank">Over Here!</a>
-            </div> 
-            <div class="clear"></div> 
-        </div> 
-        <div class="calloutoverlay"></div> 
-        <div class="calloutoverlaybottom"></div> 
-    </div> 
-</div> 
+                    <h3>Want to know all about our research?</h3>
+                    <p>Check <a href="publications.html">our publications page</a>!</p>
+                </div>
+                <a href="publications.html" class="more" target="_blank">Over Here!</a>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="calloutoverlay"></div>
+        <div class="calloutoverlaybottom"></div>
+    </div>
+</div>
 <br /><br />
 
-     <div class="container2">
-     <article class="box" id="home_featured2">
-      <ul>
-        <li>
-          <div class="imgholder"><a href="images/bulldozer-full.jpg" data-gal="prettyPhoto[featured]" title="Build Maintenance"><img src="images/bulldozer-wide.jpg" width="275" height="145" alt="" /></a></div>
-          <h4>Build Maintenance</h4>
-          <p>Did you know that build files like makefiles, ant files and configuration files change relatively more than source code files do? And did you know that in <b>up to 27% of the work items</b> in which a source code file is changed, a build file needs to be updated?</p>
-<br/>
-	  <p><a href="http://sail.cs.queensu.ca/data/pdfs/ICSE2011_AnEmpiricalStudyOfBuildMaintenanceEffort.pdf">Check out our ICSE 2011 paper &raquo;</a></p><br/>
-        </li>
-        <li>
-          <div class="imgholder"><a href="images/jam-full.jpg" data-gal="prettyPhoto[featured]" title="Release Engineering"><img src="images/jam-wide.jpg" width="275" height="145" alt="" /></a></div>
-          <h4>Release Engineering</h4>
-          <p>What is release engineering and which activities need to be performed? What are <b>today's challenges</b> for the build and integration phases of release engineering? How does our work fit with these challenges?</p>
-<br/>
-	  <p><a href="http://www.slideshare.net/bramadams/on-software-release-engineering-bram-adams">Check out our ICSE 2012 technical briefing on release engineering &raquo;</a></p><br/>
-        </li>
-        <li class="last">
-          <div class="imgholder"><a href="images/rubicub-full.jpg" data-gal="prettyPhoto[featured]" title="Concern Mining"><img src="images/rubicub-wide.jpg" width="275" height="145" alt="" /></a></div>
-          <h4>Concern Mining</h4>
-          <p>Identifying crosscutting concerns is tedious. Existing tools only return a set of function names, cannot deal with noise in identifiers, and merely yield a set of words without structure. We propose to <b>use the system's development history</b> to address these three shortcomings.</p>
-<br/>
-	  <p><a href="http://sail.cs.queensu.ca/data/pdfs/ICSE2010_IdentifyingCrosscuttingConcernsUsingHistoricalCodeChanges.pdf">Check out our ICSE 2010 paper &raquo;</a></p><br/>
-        </li>
-      </ul>
-      <br/><br/>
-      <br class="clear" />
+<div class="container2">
+    <article class="box" id="home_featured2">
+        <ul>
+            <li>
+                <div class="imgholder"><a href="images/bulldozer-full.jpg" data-gal="prettyPhoto[featured]"
+                        title="Build Maintenance"><img src="images/bulldozer-wide.jpg" width="275" height="145"
+                            alt="" /></a></div>
+                <h4>Build Maintenance</h4>
+                <p>Did you know that build files like makefiles, ant files and configuration files change relatively
+                    more than source code files do? And did you know that in <b>up to 27% of the work items</b> in which
+                    a source code file is changed, a build file needs to be updated?</p>
+                <br />
+                <p><a href="http://sail.cs.queensu.ca/data/pdfs/ICSE2011_AnEmpiricalStudyOfBuildMaintenanceEffort.pdf">Check
+                        out our ICSE 2011 paper &raquo;</a></p><br />
+            </li>
+            <li>
+                <div class="imgholder"><a href="images/jam-full.jpg" data-gal="prettyPhoto[featured]"
+                        title="Release Engineering"><img src="images/jam-wide.jpg" width="275" height="145"
+                            alt="" /></a></div>
+                <h4>Release Engineering</h4>
+                <p>What is release engineering and which activities need to be performed? What are <b>today's
+                        challenges</b> for the build and integration phases of release engineering? How does our work
+                    fit with these challenges?</p>
+                <br />
+                <p><a href="http://www.slideshare.net/bramadams/on-software-release-engineering-bram-adams">Check out
+                        our ICSE 2012 technical briefing on release engineering &raquo;</a></p><br />
+            </li>
+            <li class="last">
+                <div class="imgholder"><a href="images/rubicub-full.jpg" data-gal="prettyPhoto[featured]"
+                        title="Concern Mining"><img src="images/rubicub-wide.jpg" width="275" height="145" alt="" /></a>
+                </div>
+                <h4>Concern Mining</h4>
+                <p>Identifying crosscutting concerns is tedious. Existing tools only return a set of function names,
+                    cannot deal with noise in identifiers, and merely yield a set of words without structure. We propose
+                    to <b>use the system's development history</b> to address these three shortcomings.</p>
+                <br />
+                <p><a
+                        href="http://sail.cs.queensu.ca/data/pdfs/ICSE2010_IdentifyingCrosscuttingConcernsUsingHistoricalCodeChanges.pdf">Check
+                        out our ICSE 2010 paper &raquo;</a></p><br />
+            </li>
+        </ul>
+        <br /><br />
+        <br class="clear" />
     </article>
