--- a/r3v3rs3.html
+++ b/r3v3rs3.html
@@ -1,53 +1,79 @@
 ---
-layout: index 
+layout: index
 title: R3V3RS3, classifying conditional compilation usage
 ---
 
 <div class="box">
-  <div class="sidebar">
-    <div class="subnav">
-      <h5>Downloads</h5>
-      <ul>
-        <li>Please contact us</li>
-      </ul>
+    <div class="sidebar">
+        <div class="subnav">
+            <h5>Downloads</h5>
+            <ul>
+                <li>Please contact us</li>
+            </ul>
+        </div>
     </div>
-  </div>
 
-<div id="primarycontent">
+    <div id="primarycontent">
 
-  <div class="content">
-  <h3>Recent News</h3>
-  <ul><li>[August 7, 2009] Website published!</li></ul>
-  </div>
+        <div class="content">
+            <h3>Recent News</h3>
+            <ul>
+                <li>[August 7, 2009] Website published!</li>
+            </ul>
+        </div>
 
 
-  <div class="content">
-    <br/>  <br/>  <br/>
-    <h3>Screenshots</h3>
-  <p><img src="images/r3v3rs3/editor-annotated.png" border="1" alt="" width="450" /></p>
-  <p><img src="images/r3v3rs3/generator-annotated.png" border="1" alt="" width="450" /></p>
-  </div>
+        <div class="content">
+            <br /> <br /> <br />
+            <h3>Screenshots</h3>
+            <p><img src="images/r3v3rs3/editor-annotated.png" border="1" alt="" width="450" /></p>
+            <p><img src="images/r3v3rs3/generator-annotated.png" border="1" alt="" width="450" /></p>
+        </div>
 
-  <div class="content">
-    <br/>  <br/>  <br/>
-    <h3>Functionality</h3>
-    <p>R3V3RS3 is a framework which provides an interactive GUI to specify patterns of conditional compilation usage in C code ("preprocessor blueprints") and a Perl script generator to detect all occurrences of these patterns. It can be used to <a href="http://sail.cs.queensu.ca/data/pdfs/AOSD2009_CanWeRefactorConditionalCompilationIntoAspects_.pdf">evaluate the potential of extracting conditional compilation usage into aspects</a>, to enforce programming conventions or to keep track of conditional compilation usage in general. R3V3RS3 is built on the <a href="http://lore.cmi.ua.ac.be/fetchWiki/index.php">Fetch</a> reverse-engineering framework.</p>
-  </div>
-  <div class="content">
-    <br/>  <br/>  <br/>
-    <a name="pubs"></a><h3>Publications</h3>
-  <ul>
-    <li>
-      ADAMS, B., DE MEUTER, W., TROMP, H. and HASSAN, A. E. (2009). <a name="aosd09" href="http://sail.cs.queensu.ca/data/pdfs/AOSD2009_CanWeRefactorConditionalCompilationIntoAspects_.pdf">Can we Refactor Conditional Compilation into Aspects?</a>, in Proceedings of the 8th ACM international conference on Aspect-oriented Software Development, AOSD (Charlottesville, VA, US), pages 243-254, ISBN-ISSN: 978-1-60558-442-3, ACM, March 2009. (Acceptance ratio: 19/86=22%)&nbsp;<a href="publications/2009/aosd09b.bib"><i>BibTeX</i></a>&nbsp;<span style="color: black; font-weight: bold">(Most Influential Paper Award)</span>
-    </li>
-    <li>
-      ADAMS, B., HASSAN, A. E., TROMP, H. and DE MEUTER, W. (2009). <a href="publications/2009/r3v3rs3.pdf">R3V3RS3: Querying for Syntactical Patterns of Conditional Compilation Usage (demo)</a>, in Proceedings of the 8th ACM international conference on Aspect-oriented Software Development, AOSD (Charlottesville, VA, US), March 2009.&nbsp;<a href="publications/2009/aosd09.bib"><i>BibTeX</i></a>
-    </li>
-    <li>
-      ADAMS, B. (2008). <a name="phd" href="publications/2008/PhD.pdf">Co-evolution of Source Code and the Build System: Impact on the Introduction of AOSD in Legacy Systems</a>, PhD dissertation, 353 p., ISBN 978-90-8578-203-2, Ghent University, Belgium, May 2008.&nbsp;<a href="publications/2008/phd.bib"><i>BibTeX</i></a>
-    </li>
-    <li>ADAMS, B., VAN ROMPAEY, B., GIBBS, C., COADY, Y. and TROMP, H. (2008). <a name="late08" href="publications/2008/late.pdf">Aspect mining in the Presence of the C Preprocessor</a>, in Proceedings of the 4th Linking Aspect Technology and Evolution Workshop, LATE (Brussels, Belgium), pages 1-6, ISBN: 978-1-60558-147-7, ACM, April 2008.&nbsp;<a href="publications/2008/late08.bib"><i>BibTeX</i></a>
-    </li>
-  </ul>
-</div>			
-</div>
+        <div class="content">
+            <br /> <br /> <br />
+            <h3>Functionality</h3>
+            <p>R3V3RS3 is a framework which provides an interactive GUI to specify patterns of conditional compilation
+                usage in C code ("preprocessor blueprints") and a Perl script generator to detect all occurrences of
+                these patterns. It can be used to <a
+                    href="http://sail.cs.queensu.ca/data/pdfs/AOSD2009_CanWeRefactorConditionalCompilationIntoAspects_.pdf">evaluate
+                    the potential of extracting conditional compilation usage into aspects</a>, to enforce programming
+                conventions or to keep track of conditional compilation usage in general. R3V3RS3 is built on the <a
+                    href="http://lore.cmi.ua.ac.be/fetchWiki/index.php">Fetch</a> reverse-engineering framework.</p>
+        </div>
+        <div class="content">
+            <br /> <br /> <br />
+            <a name="pubs"></a>
+            <h3>Publications</h3>
+            <ul>
+                <li>
+                    ADAMS, B., DE MEUTER, W., TROMP, H. and HASSAN, A. E. (2009). <a name="aosd09"
+                        href="http://sail.cs.queensu.ca/data/pdfs/AOSD2009_CanWeRefactorConditionalCompilationIntoAspects_.pdf">Can
+                        we Refactor Conditional Compilation into Aspects?</a>, in Proceedings of the 8th ACM
+                    international conference on Aspect-oriented Software Development, AOSD (Charlottesville, VA, US),
+                    pages 243-254, ISBN-ISSN: 978-1-60558-442-3, ACM, March 2009. (Acceptance ratio: 19/86=22%)&nbsp;<a
+                        href="publications/2009/aosd09b.bib"><i>BibTeX</i></a>&nbsp;<span
+                        style="color: black; font-weight: bold">(Most Influential Paper Award)</span>
+                </li>
+                <li>
+                    ADAMS, B., HASSAN, A. E., TROMP, H. and DE MEUTER, W. (2009). <a
+                        href="publications/2009/r3v3rs3.pdf">R3V3RS3: Querying for Syntactical Patterns of Conditional
+                        Compilation Usage (demo)</a>, in Proceedings of the 8th ACM international conference on
+                    Aspect-oriented Software Development, AOSD (Charlottesville, VA, US), March 2009.&nbsp;<a
+                        href="publications/2009/aosd09.bib"><i>BibTeX</i></a>
+                </li>
+                <li>
+                    ADAMS, B. (2008). <a name="phd" href="publications/2008/PhD.pdf">Co-evolution of Source Code and the
+                        Build System: Impact on the Introduction of AOSD in Legacy Systems</a>, PhD dissertation, 353
+                    p., ISBN 978-90-8578-203-2, Ghent University, Belgium, May 2008.&nbsp;<a
+                        href="publications/2008/phd.bib"><i>BibTeX</i></a>
+                </li>
+                <li>ADAMS, B., VAN ROMPAEY, B., GIBBS, C., COADY, Y. and TROMP, H. (2008). <a name="late08"
+                        href="publications/2008/late.pdf">Aspect mining in the Presence of the C Preprocessor</a>, in
+                    Proceedings of the 4th Linking Aspect Technology and Evolution Workshop, LATE (Brussels, Belgium),
+                    pages 1-6, ISBN: 978-1-60558-147-7, ACM, April 2008.&nbsp;<a
+                        href="publications/2008/late08.bib"><i>BibTeX</i></a>
+                </li>
+            </ul>
+        </div>
+    </div>
