--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <h3>Conference</h3>
         <ul>
             <li>
-                OLEWICKI, D., NAYROLLES, N., and ADAMS, B. (2022). <a href="publications/2022/icse22.pdf">Towards
+                OLEWICKI, D., NAYROLLES, M., and ADAMS, B. (2022). <a href="publications/2022/icse22.pdf">Towards
                     Language-independent Brown Build Detection</a>, in Proceedings of the 44th International Conference
                 on Software Engineering, ICSE (Pittsburgh, PA, USA), to appear. (Acceptance ratio:
                 197/751=26.23%)&nbsp;<a href="publications/2022/icse22.bib"><i>BibTeX</i></a>
