--- a/publications.html
+++ b/publications.html
@@ -496,7 +496,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>
                 MOJICA, I. J., NAGAPPAN, M., ADAMS, B., BERGER, T., DIENST, S. and HASSAN, A. E. (2016). <a
-                    href="http://www.se.rit.edu/~mei/publications/pdfs/An-Examination-of-the-Current-Rating-System-used-in-Mobile-App-Stores.pdf">Examining
+                    href="https://cs.uwaterloo.ca/~m2nagapp/publications/pdfs/An-Examination-of-the-Current-Rating-System-used-in-Mobile-App-Stores.pdf">Examining
                     the Rating System Used in Mobile App Stores</a>, IEEE Software, 33 (6), pages 86-92, IEEE.&nbsp;<a
                     href="publications/2016/mojicaiee4.bib"><i>BibTeX</i></a>
             </li>
