Another incorrect URL.

--- a/publications.html
+++ b/publications.html
@@ -804,9 +804,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 (6), pages 86-92, IEEE.&nbsp;<a href="publications/2014/mojica14ieee2.bib"><i>BibTeX</i></a>
             </li>
             <li>
-                MOJICA, I. J., ADAMS, B., NAGAPPAN, M., DIENST, S., BERGER, T. and HASSAN, A. E. (2014). <a
-                    name="mojica14ieee"
-                    href="http://sail.cs.queensu.ca/data/pdfs/EMSE_ALarge-ScaleEmpiricalStudyOfTheRelationshipBetweenBuildTechnologyAndBuildMaintenance.pdf">A
+                MOJICA, I. J., ADAMS, B., NAGAPPAN, M., DIENST, S., BERGER, T. and HASSAN, A. E. (2014). <a name="mojica14ieee"
+                    href="https://cs.uwaterloo.ca/~m2nagapp/publications/pdfs/An-Examination-of-the-Current-Rating-System-used-in-Mobile-App-Stores.pdf">A
                     Large Scale Empirical Study on Software Reuse in Mobile Apps</a>, IEEE Software, 31 (2), pages
                 78-86, IEEE.&nbsp;<a href="publications/2014/mojica14ieee.bib"><i>BibTeX</i></a>
             </li>
