All broken URLs should be fixed now.

--- a/publications.html
+++ b/publications.html
@@ -805,7 +805,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>
                 MOJICA, I. J., ADAMS, B., NAGAPPAN, M., DIENST, S., BERGER, T. and HASSAN, A. E. (2014). <a name="mojica14ieee"
-                    href="https://cs.uwaterloo.ca/~m2nagapp/publications/pdfs/An-Examination-of-the-Current-Rating-System-used-in-Mobile-App-Stores.pdf">A
+                    href="https://cs.uwaterloo.ca/~m2nagapp/publications/publications/A-Large-Scale-Empirical-Study-on-Software-Reuse-in-Mobile-Apps.html">A
                     Large Scale Empirical Study on Software Reuse in Mobile Apps</a>, IEEE Software, 31 (2), pages
                 78-86, IEEE.&nbsp;<a href="publications/2014/mojica14ieee.bib"><i>BibTeX</i></a>
             </li>
@@ -940,7 +940,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <ul>
             <li>
                 SYER, M. D., NAGAPPAN, M., HASSAN, A. E. and ADAMS, B. (2013). <a
-                    href="http://www.se.rit.edu/~mei/publications/pdfs/Revisiting-Prior-Empirical-Findings-For-Mobile-Apps-An-Empirical-Case-Study-on-the-15-Most-Popular-Open-Source-Android-Apps.pdf">Revisiting
+                    href="https://cs.uwaterloo.ca/~m2nagapp/publications/publications/Revisiting-Prior-Empirical-Findings-For-Mobile-Apps-An-Empirical-Case-Study-on-the-15-Most-Popular-Open-Source-Android-Apps.html">Revisiting
                     Prior Empirical Findings For Mobile Apps: An Empirical Case Study on the 15 Most Popular Open-Source
                     Android Apps</a>, in Proceedings of the 2013 Conference of the Center for Advanced Studies on
                 Collaborative Research, CASCON (Markham, ON, Canada), pages 283-297. (Acceptance ratio:
